# https-cert-expiry-checker

./: README.md  https-cert-expiry-checker.py  https_cert_expiry_checker.py  pyproject.toml  requirements.txt  tls-certificate-expiry-checker.py
.github/workflows/: ci.yml  codeql.yml
