[tool.poetry]
name = "https-cert-expiry-checker"
version = "0.1.0"
description = ""
authors = ["Wellington Ozorio <wozorio@duck.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
sendgrid = "^6.12.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
